# cdm-shared-library

./: .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .release  CHANGELOG.md  CHANGELOG.rst  CODEOWNERS  Dockerfile  LICENSE  MANIFEST.skao.int  Makefile  Pipfile  README.md  code-analysis.sh  pyproject.toml  pyproject.toml-e  release_resources.py  setup.cfg  setup.py  setup.py-e  ska_telmodel-1.9.1-py3-none-any.whl  tox.ini
.make/: Makefile.mk  docker.mk
cdm_lib/: cdm_example.py  messages.py  schemas.py
docs/src/: client.rst  conf.py  index.rst
docs/src/developer/: ExpandContractDesignPattern.rst  developer.rst  expand_contract.rst  json_schema.puml  json_schema.txt  layout.puml  layout.txt  messages_cn.txt  messages_san.txt  packages.txt  schema_cn.puml  schema_cn.txt  schema_mccscontroller.puml  schema_mccssubarray.puml  schema_mccssubarray.txt  schema_san.puml  schema_san.txt  semantic_validation.rst  validation_json.rst
docs/src/developer/centralnode/: assignresources.puml  assignresources.txt  centralnode.puml  centralnode.rst  centralnode.txt  csp.puml  mccs.puml  releaseresources.puml  releaseresources.txt  telescopestart.puml
docs/src/developer/mccscontroller/: allocate.puml  mccscontroller.puml  mccscontroller.rst  mccscontroller.txt  releaseresources.puml
docs/src/developer/mccssubarray/: assigned_resources.puml  configure.puml  mccssubarray.puml  mccssubarray.rst  scan.puml
docs/src/developer/subarraynode/: assignedresources.puml  core.puml  core.txt  csp.puml  csp.txt  init.puml  init.txt  mccs.puml  mccs.txt  pst.puml  receptorgroup.puml  scan.puml  scan.txt  sdp.puml  sdp.txt  skydirection.puml  subarraynode.puml  subarraynode.rst  subarraynode.txt  tmc.puml  tmc.txt
docs/src/package/: api.rst  messages.rst
images/ska-tmc-cdm/: Dockerfile
scripts/: cdm_example.py  csv_reader.py
ska/cdm/: __init__.py  schemas.py
ska/cdm/messages/: __init__.py
ska/cdm/messages/central_node/: __init__.py  assign_resources.py
ska/cdm/messages/subarray_node/: __init__.py  configure.py  configure_subarray.py  scan.py  scan_subarray.py
ska/cdm/messages/subarray_node/configure/: __init__.py  common.py  core.py  csp.py  sdp.py
ska/cdm/schemas/: __init__.py  central_node.py  codec.py
ska/cdm/schemas/subarray_node/: __init__.py  scan.py
ska/cdm/schemas/subarray_node/configure/: __init__.py  common.py  core.py  csp.py  sdp.py
src/ska/cdm/: exceptions.py
src/ska/cdm/jsonschema/: json_schema.py
src/ska/cdm/messages/: __init__.py
src/ska/cdm/messages/central_node/: __init__.py  assign_resources.py  common.py  csp.py  mccs.py  release_resources.py  sdp.py
src/ska/cdm/messages/mccscontroller/: __init__.py  allocate.py
src/ska/cdm/messages/mccssubarray/: __init__.py  configure.py  scan.py
src/ska/cdm/messages/subarray_node/: assigned_resources.py  scan.py
src/ska/cdm/schemas/: __init__.py  central_node.py  codec.py  shared.py
src/ska/cdm/schemas/central_node/: __init__.py  assign_resources.py  common.py  csp.py  mccs.py  release_resources.py  sdp.py
src/ska/cdm/schemas/mccscontroller/: __init__.py  allocate.py  releaseresources.py
src/ska/cdm/schemas/mccssubarray/: __init__.py  assigned_resources.py  configure.py  scan.py
src/ska/cdm/schemas/subarray_node/: __init__.py  assigned_resources.py  scan.py
src/ska_tmc_cdm/: __init__.py  exceptions.py  utils.py
src/ska_tmc_cdm/jsonschema/: json_schema.py
src/ska_tmc_cdm/messages/: __init__.py  base.py  skydirection.py
src/ska_tmc_cdm/messages/central_node/: __init__.py  assign_resources.py  common.py  csp.py  mccs.py  release_resources.py  release_resources_new.py  sdp.py  telescope_start.py
src/ska_tmc_cdm/messages/mccscontroller/: __init__.py  allocate.py  releaseresources.py
src/ska_tmc_cdm/messages/mccssubarray/: __init__.py  assigned_resources.py  configure.py  scan.py
src/ska_tmc_cdm/messages/subarray_node/: __init__.py  assigned_resources.py  scan.py
src/ska_tmc_cdm/messages/subarray_node/configure/: __init__.py  core.py  csp.py  mccs.py  pst.py  receptorgroup.py  sdp.py  tmc.py
src/ska_tmc_cdm/schemas/: __init__.py  codec.py  shared.py  telmodel_validation.py
src/ska_tmc_cdm/schemas/central_node/: __init__.py  assign_resources.py  common.py  csp.py  mccs.py  release_resources.py  sdp.py  telescope_start.py
src/ska_tmc_cdm/schemas/mccscontroller/: __init__.py  allocate.py  releaseresources.py
src/ska_tmc_cdm/schemas/mccssubarray/: __init__.py  assigned_resources.py  configure.py  scan.py
src/ska_tmc_cdm/schemas/subarray_node/: __init__.py  assigned_resources.py  scan.py
src/ska_tmc_cdm/schemas/subarray_node/configure/: __init__.py  core.py  csp.py  mccs.py  sdp.py  tmc.py
test-harness/: Makefile
tests/: Makefile  conftest.py  requirements.txt  test_cdm.py  test_echo.py  testfile_sample_configure.json  utils.py
tests/fixtures/builder_pattern/: assign_resource.py  configure_resource.py
tests/ska/cdm/: test_schemas.py
tests/ska/cdm/jsonschema/: test_json_schema.py
tests/ska/cdm/messages/central_node/: test_assign_resources.py  test_common.py  test_csp.py  test_mccs.py  test_release_resources.py  test_sdp.py
tests/ska/cdm/messages/mccscontroller/: test_allocate.py  test_releaseresources.py
tests/ska/cdm/messages/mccssubarray/: test_configure.py  test_scan.py
tests/ska/cdm/messages/subarray_node/: test_assigned_resources.py  test_configure.py  (+2 more)
tests/ska/cdm/schemas/: test_central_node.py  test_codec.py  testfile_sample_configure.json  testfile_sample_configure_ADR_18.json  utils.py
tests/unit/ska_tmc_cdm/builder/: skydirection.py
tests/unit/ska_tmc_cdm/jsonschema/: test_json_schema.py
tests/unit/ska_tmc_cdm/messages/: base.py  test_base.py  test_skydirection.py
tests/unit/ska_tmc_cdm/schemas/: test_codec.py  test_shared.py  testfile_invalid_configure.json  testfile_invalid_configure_ADR_18.json  testfile_sample_configure.json  testfile_sample_configure_ADR_18.json  utils.py
tests/unit/ska_tmc_cdm/serialisation/: serialisation_utils.py  test_codec.py  test_skydirection.py  utils.py
(+169 files in other folders)
