[tool.poetry]
name = "ska-tmc-cdm"
version = "6.0.4"
description = "SKA Control Data Model serialisation library"
authors = ["Team Buttons"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://gitlab.com/ska-telescope/ska-tmc-cdm"
documentation = "https://developer.skao.int/projects/ska-oso-pdm/en/latest/index.html"
keywords = ["SKA OSO TMC"]

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[tool.poetry.dependencies]
python = "^3.7"
marshmallow = "^3.15.0"
astropy = "^4.3.1"
ska-telmodel = "^1.3.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-forked = "^1.4.0"
pytest-json-report = "^1.5.0"
pycodestyle = "^2.8.0"
isort = "^5.10.1"
pylint-junit = "^0.3.2"
flake8 = "^4.0.1"
sphinx = "^4.3.2"
sphinx-rtd-theme = "^1.0.0"
deepdiff = "^5.7.0"
click = "8.0.4"

[tool.coverage.run]
parallel = true
branch = true
data_file = ".coverage/.coverage"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
