[tool.poetry]
name = "ska-tmc-cdm"
version = "11.0.1"
description = "SKA Control Data Model serialisation library"
authors = ["Team Buttons"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://gitlab.com/ska-telescope/ska-tmc-cdm"
documentation = "https://developer.skao.int/projects/ska-tmc-cdm/en/latest/index.html"
keywords = []
packages = [
    { include = "ska_tmc_cdm", from = "src" }
]
include = [
    { path = 'tests' }
]
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
]

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[[tool.poetry.source]]
name = "PyPI-public"
url = 'https://pypi.org/simple'


[tool.poetry.dependencies]
python = "^3.10"
astropy = "^5.1"
deepdiff = "^5.8.1"
pydantic = "^2.7.0"
pydantic-core = "^2.18.1"
annotated-types = "^0.6.0"
ska-ost-osd = "2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-forked = "^1.4.0"
pytest-json-report = "^1.5.0"
pycodestyle = "^2.9.1"
pylint-junit = "^0.3.2"
isort = "^5.10.1"
black = "^22.8.0"
flake8 = "^5.0.4"
simpleeval = "^0.9.13"
pyright = "^1.1.370"

[tool.poetry.group.docs.dependencies]
tomli = "^2.0.1"
ska-ser-sphinx-theme = "^0.1.2"
recommonmark = "^0.7.1"

[tool.pytest.ini_options]
addopts = "--ignore tests/fixtures/"

[tool.coverage.run]
parallel = true
branch = true
data_file = ".coverage/.coverage"

[tool.isort]
profile = "black"
skip = ["tests/fixtures/"]
line_length = 88

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | tests/fixtures/
)
'''

[tool.pylint."messages control"]
disable = [
    "fixme",
    # Silencing unexpected-keyword-arg because of dish/dish_allocation
    # See messages/central_node/assign_resources.py
    # and https://stackoverflow.com/q/77142439/845210#
    "unexpected-keyword-arg",
]
enable = "useless-suppression"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
