[metadata]
description-file = README.md

[aliases]
test=pytest

[coverage:run]
branch = True
source = ska.cdm

[tool:pytest]
testpaths = tests
addopts = --json-report
          --json-report-file=htmlcov/report.json
          --cov-report term
          --cov-report html
          --cov-report xml
          --cov=src
          --junitxml=./build/unit-tests.xml
junit_family = legacy

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html
