[metadata]
description-file = README.md

[aliases]
test=pytest

[coverage:run]
branch = True
source = ska.cdm

[tool:pytest]
testpaths = tests/unit
addopts =
          --json-report
          --json-report-file=build/reports/report.json
          --cov-report term
          --cov-report html:build/htmlcov
          --cov-report xml:build/reports/code-coverage.xml
          --cov=ska.cdm
          --junitxml=build/reports/unit-tests.xml
          --verbose
#          --dist loadscope --numprocesses auto

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs/src
build-dir = docs/build
all_files = 1
builder = html
